--- a/_includes/home/about.html
+++ b/_includes/home/about.html
@@ -3,7 +3,7 @@
     <span class="section__subtitle">{{ site.data.content.about.subtitle }}</span>
 
     <div class="about__container container grid">
-        <img src="<a href='https://postimg.cc/3yVjMgPS' target='_blank'><img src='https://i.postimg.cc/3yVjMgPS/958-F3673-3-FA5-4-DB2-A0-F3-273-E2-AC96-D22.png' border='0' alt='958-F3673-3-FA5-4-DB2-A0-F3-273-E2-AC96-D22'/></a>" alt="" class="about__img">
+        <img src=""{{ site.baseurl }}/assets/img/about.jpg" alt="" class="about__img">
 
         <div class="about__data">
             <p class="about__description">
