--- a/_includes/home/about.html
+++ b/_includes/home/about.html
@@ -3,7 +3,7 @@
     <span class="section__subtitle">{{ site.data.content.about.subtitle }}</span>
 
     <div class="about__container container grid">
-        <img src="{{ site.baseurl }}/assets/img/Untitled 65.png" alt="" class="about__img">
+        <img src="{{ site.baseurl }}/assets/img/about.png" alt="" class="about__img">
 
         <div class="about__data">
             <p class="about__description">
