--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,1 +1,2 @@
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="32x32" 
+      href="assets/thumbnails/favicon-32x32.png/favicon-32x32.png">
