--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,1 +1,1 @@
-<link rel="icon" type="image/png" sizes="32x32" href="assets/thumbnails/favicon-32x32.png">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
