--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
         <div>
           <h1 class="footer__title">{{ site.author.name }}</h1>
           <!-- <span class="footer__subtitle">{{ site.author.title }}</span> -->
-          <div class="footer__subtitle"><a href="thefuzz_25@icloud.com">
-          Contact me here <i class="uil uil-github-alt"></i></a>
+          <div class="footer__subtitle"><label for="email">thefuzz_25@icloud.com
+          <i class="uil uil-github-alt"></i></label>
           </div>
         </div>
         <div></div>
