--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
           <h1 class="footer__title">{{ site.author.name }}</h1>
           <!-- <span class="footer__subtitle">{{ site.author.title }}</span> -->
           <div class="footer__subtitle"><label for="email">thefuzz_25@icloud.com
-          <i class="uil uil-github-alt"></i></label>
+          <i class="uil uil-mailbox-alt"></i></label>
           </div>
         </div>
         <div></div>
