--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
         <div>
           <h1 class="footer__title">{{ site.author.name }}</h1>
           <!-- <span class="footer__subtitle">{{ site.author.title }}</span> -->
-          <div class="footer__subtitle"><label for="mail">thefuzz_25@icloud.com
-          <i class="uil uil-mail-alt"></i></label>
+          <div class="footer__subtitle"><label for="email">thefuzz_25@icloud.com
+          <i class="uil uil-email-alt"></i></label>
           </div>
         </div>
         <div></div>
