--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
         <div>
           <h1 class="footer__title">{{ site.author.name }}</h1>
           <!-- <span class="footer__subtitle">{{ site.author.title }}</span> -->
-          <div class="footer__subtitle"><a href = "mailto: thefuzz_25@icloud.com">Send Email
-            <i class="uil uil-gmail-alt"></i></a>
+          <div class="footer__subtitle"><a href = "mailto: thefuzz_25@icloud.com">thefuzz_25@icloud.com
+            <i class="uil uil-mailbox-alt"></i></a>
           </div>
         </div>
         <div></div>
