--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
           <h1 class="footer__title">{{ site.author.name }}</h1>
           <!-- <span class="footer__subtitle">{{ site.author.title }}</span> -->
           <div class="footer__subtitle"><a href = "mailto: thefuzz_25@icloud.com">thefuzz_25@icloud.com
-            <i class="uil uil-email-alt"></i></a>
+            <i class="uil uil-mail-alt"></i></a>
           </div>
         </div>
         <div></div>
