--- a/_includes/home/blog-button.html
+++ b/_includes/home/blog-button.html
@@ -1,3 +1,9 @@
+<section class="blog section" id="blog">
+    <h2 class="section__title">{{ site.data.content.blog.title }}</h2>
+    <span class="section__subtitle">{{ site.data.content.blog.subtitle}}</span>
+    <div class="blog__container container grid">
+        {% for post in site.posts limit: 5 %}
+        <div class="blog__content">       
         <div class="blog__content">
             <div>
                 <i class="uil blog__icon"></i>
@@ -6,3 +12,6 @@
                 <a href="/blog" class="button button-flex button--link">Read →</a>
            </div>
         </div>
+        {% endfor %}
+    </div>
+</section>                
