--- a/_includes/home/blog-button.html
+++ b/_includes/home/blog-button.html
@@ -1,4 +1,4 @@
-<section class="blog section" id="blog">
+<section class="blog section" id="blog button">
     <h2 class="section__title">{{ site.data.content.blog.title }}</h2>
     <span class="section__subtitle">{{ site.data.content.blog.subtitle}}</span>
     <div class="blog__container container grid">
