--- a/_includes/home/blog.html
+++ b/_includes/home/blog.html
@@ -8,11 +8,14 @@
             <div>
                 <i class="uil blog__icon"></i>
                 <h3 class="blog__title">{{ post.title }}</h3>
-                if ({%- assign date_format =  "%b %-d, %Y" -%})
+                {% if {%- assign date_format =  "%b %-d, %Y" -%} %}
                 <p><time class="dt-published" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
                     {{ post.date | date: date_format }}
                 </time></p>
-                else {{ post.date | date: "-" }}
+                {% else %}
+                <p><time class="dt-published" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
+                    {{ post.date | date: "-" }}
+                </time></p>
                 <a href="{{ post.url }}" class="button button-flex button--link">Read &rarr;</a>
            </div>
         </div>
