--- a/_includes/home/blog.html
+++ b/_includes/home/blog.html
@@ -16,6 +16,7 @@
                 <p><time class="dt-published" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
                     {{ post.date | date: "-" }}
                 </time></p>
+                {% endif %}
                 <a href="{{ post.url }}" class="button button-flex button--link">Read &rarr;</a>
            </div>
         </div>
