--- a/_layouts/art.html
+++ b/_layouts/art.html
@@ -6,16 +6,16 @@ layout: default
     <h2 class="section__title">Art</h2>
     <span class="section__subtitle">My Works</span>
     <div class="container__card grid">
-        {% for post in site.posts %}
-        <a href="{{ post.url }}">
+        {% for apost in site.aposts %}
+        <a href="{{ apost.url }}">
             <div class="card">
                 <div class="card__header">
-                    <img src="{{ site.baseurl }}/assets/thumbnails/{{ post.thumbnail | default: 'default.jpeg' }}" alt="card__image" class="card__image" width="400">
+                    <img src="{{ site.baseurl }}/assets/thumbnails/{{ apost.thumbnail | default: 'default.jpeg' }}" alt="card__image" class="card__image" width="400">
                 </div>
                 <div class="card__body">
-                    <h3>{{post.title}}</h3>
-                    <small>{{ post.date | date_to_string }}</small>
-                    <small>{{ post.content | truncate:100 }}</small>
+                    <h3>{{apost.title}}</h3>
+                    <small>{{ apost.date | date_to_string }}</small>
+                    <small>{{ apost.content | truncate:100 }}</small>
                 </div>
             </div>
         </a>
