--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,11 @@
                       <i class="uil uil-book nav__icon"></i>Blog
                   </a>
               </li>
+              <li class="nav__item">
+                  <a href="{{ site.baseurl}}/art" class="nav__link">
+                      <i class="uil uil-book nav__icon"></i>Art
+                  </a>
+              </li>
          </ul>
           <i class="uil uil-times nav__close" id="nav-close"></i>
       </div>
