--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
               </li>
               <li class="nav__item">
                   <a href="{{ site.baseurl}}/art" class="nav__link">
-                      <i class="uil uil-book nav__icon"></i>Art
+                      <i class="uil uil-art nav__icon"></i>Art
                   </a>
               </li>
          </ul>
