--- a/_layouts/art.html
+++ b/_layouts/art.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="art section">
     <h2 class="section__title">Art</h2>
-    <span class="section__subtitle">My Works</span>
+    <span class="section__subtitle">Love for All Things Creative</span>
     <div class="container__card grid">
         {% for apost in site.aposts %}
         <a href="{{ apost.url }}">
