--- a/_layouts/art.html
+++ b/_layouts/art.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <section class="art section">
-    <h2 class="section__title">Art</h2>
-    <span class="section__subtitle">Love for All Things Creative</span>
+    <h2 class="section__title">Fine Art</h2>
+    <span class="section__subtitle">My Works</span>
     <div class="container__card grid">
         {% for apost in site.aposts %}
         <a href="{{ apost.url }}">
