--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,3 +15,6 @@
   {%- include custom-head.html -%}
   {%- include google-analytics.html -%}
 </head>
+<head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+</head>
