--- a/_includes/home/blog.html
+++ b/_includes/home/blog.html
@@ -17,4 +17,9 @@
         </div>
         {% endfor %}
     </div>
+    <div class="blog__buttons">
+                <a href="{{ site.baseurl }}/_includes/home/blog.html" target="_blank" class="button button--flex">
+                    {{ site.data.content.about.button }} <i class="uil uil-message button__icon"></i>
+                </a>
+    </div>
 </section>
