--- a/_includes/home/buttons.html
+++ b/_includes/home/buttons.html
@@ -11,11 +11,13 @@
  <script> 
  function function1() { 
  <a href="{{ site.baseurl }}/assets/pdf/resume.pdf" target="_blank" class="button button--flex">
-                    {{ site.data.content.about.button }} <i class="uil uil-message button__icon"></i>; 
+                    {{ site.data.content.about.button }} Check Out My Resume <i class="uil uil-message button__icon"></i>; 
+ </a>
  } 
  function function2() { 
  <a href="https://thefuzz25.github.io/blog/" target="_blank" class="button button--flex">
-                    {{ site.data.content.blog.button }} <i class="uil uil-message button__icon"></i>;
+                    {{ site.data.content.blog.button }} Check Out The Blog <i class="uil uil-message button__icon"></i>;
+ </a>
  } 
  </script> 
 </body> 
