--- a/_includes/home/about.html
+++ b/_includes/home/about.html
@@ -19,7 +19,7 @@
                 {% endfor %}
             </div>
             <div class="about__buttons">
-                <a href="{{ site.baseurl }}/assets/pdf/resume.pdf" target="_blank" class="button button--flex">
+                <a href="{{ site.baseurl }}/assets/pdf/resume.pdf" target="_blank" class="btn1 btn1--flex">
                     {{ site.data.content.about.button }} <i class="uil uil-message button__icon"></i>
                 </a>
             </div>
