--- a/_includes/home/blog.html
+++ b/_includes/home/blog.html
@@ -18,8 +18,8 @@
         {% endfor %}
     </div>
     <div class="blog__buttons">
-                <a href="{{ site.baseurl }}/_includes/home/blog.html" target="_blank" class="btn1 btn1--flex">
-                    {{ site.data.content.about.button }} <i class="uil uil-message button__icon"></i>
+                <a href="{{ site.baseurl }}/blog/" target="_blank" class="btn2 btn2--flex">
+                    {{ site.data.content.blog.button }} <i class="uil uil-message button__icon"></i>
                 </a>
     </div>
 </section>
