--- a/_includes/home/blog.html
+++ b/_includes/home/blog.html
@@ -19,7 +19,7 @@
     </div>
     <div class="blog__buttons">
                 <a href="{{ site.baseurl }}/blog/" target="_blank" class="btn2 btn2--flex">
-                    {{ site.data.content.blog.button }} <i class="uil uil-message button__icon"></i>
+                    {{ site.data.content.blog.button }} Check Out The Blog <i class="uil uil-message button__icon"></i>
                 </a>
     </div>
 </section>
