--- a/_includes/home/about.html
+++ b/_includes/home/about.html
@@ -20,7 +20,7 @@
             </div>
             <div class="about__buttons">
                 <a href="{{ site.baseurl }}/assets/pdf/resume.pdf" target="_blank" class="btn1 btn1--flex">
-                    {{ site.data.content.about.button }} <i class="uil uil-message button__icon"></i>
+                    {{ site.data.content.about.button }} Check Out My Resume <i class="uil uil-message button__icon"></i>
                 </a>
             </div>
         </div>
