--- a/_includes/home/blog.html
+++ b/_includes/home/blog.html
@@ -1,3 +1,6 @@
+<head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+</head>
 <section class="blog section" id="blog">
     <h2 class="section__title">{{ site.data.content.blog.title }}</h2>
     <span class="section__subtitle">{{ site.data.content.blog.subtitle}}</span>
