--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,3 +1,3 @@
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="&#128640;" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
