--- a/_includes/home/portfolio.html
+++ b/_includes/home/portfolio.html
@@ -3,9 +3,12 @@
     <h2 class="section__title">{{ site.data.content.portfolio.title }}</h2>
     <span class="section__subtitle">{{ site.data.content.portfolio.subtitle }}</span>
 
-    <div class="container">
+    <div class="portfolio__container container swiper-container">
+         <div class="swiper-wrapper">
+
             {% for project in site.data.content.portfolio.projects %}
-            <div class="portfolio__content">
+            <!--======================== PORTFOLIO 1 =============-->
+             <div class="portfolio__content grid swiper-slide">
                 <img src="assets/img/{{ project.image }}" alt="" class="portfolio__img">
 
                 <div class="portfolio__data">
@@ -20,5 +23,16 @@
                 </div>
             </div>
             {% endfor %}
+         </div>
+         <!--============ Add Arrows =============-->
+         <div class="swiper-button-next">
+             <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+         </div>
+         <div class="swiper-button-prev">
+             <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+         </div>
+
+         <!--============ Add Pagination =============-->
+         <div class="swiper-pagination"></div>
     </div>
 </section>
