--- a/_layouts/art.html
+++ b/_layouts/art.html
@@ -6,4 +6,4 @@ layout: default
     <h2 class="section__title">Fine Art</h2>
     <span class="section__subtitle">My Works</span>
 </section>
-{% if site.data.content.portfolio %}{% include art/portfolio.html %}{% endif %}
+{% if site.data.content.portfolio %}{% include home/portfolio.html %}{% endif %}
